# Analyse_discursive_depute_fr_sur_conflit_Israelo_Palestinien

./: .gitignore  DESIGN_SYSTEM.md  PUSH_CHECKLIST.md  README.md  index.html  package-lock.json  pyproject.toml  requirements-lock.txt  requirements.txt
publication/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
publication/data/: README.md
publication/data/processed/: .gitkeep
publication/data/results/: accord_v3_v4.csv  arc_narratif.csv  attrition_mensuelle.csv  ceasefire_call_batch_bloc.csv  ceasefire_call_v4.csv  ceasefire_lexical_v3.csv  ceasefire_type.csv  coherence_twitter_an_par_depute.csv  coherence_v4.csv  conditionality.csv  conditionality_par_batch_bloc.csv  convergence_batch_bloc.csv  cosine_distance_3paires.csv  cosine_distance_mensuelle.csv  droite_stance_mensuel.csv  droite_stance_par_batch.csv  emotional_register.csv  emotional_register_v4.csv  engagement_bloc_stance.csv  event_impact_diff_in_diff.csv  fighting_words.csv  (+17 more)
publication/docs/: CODEBOOK.md  COMPTE_RENDU_RESULTATS.md  EVALUATION_IE_ANALYSTE.md  EXPLORATION_GROUPES.md  METHODOLOGIE.md  PUBLICATION_CHECKLIST.md  PUSH_GIT.md  RAPPORT_EXPLORATION_CLASSIFICATION_GROUPES.md  RAPPORT_VALIDATION_AGENT.md
publication/notebooks/: 01_corpus_validation.ipynb  02_framing_lexique_emotions.ipynb  03_evenements_convergence.ipynb  04_ml_validation.ipynb  README.md
publication/reports/: README.md
publication/src/: __init__.py  analyses_supplementaires.py  build_analyses_extended.py  config.py  describe_data.py  export_stance_par_groupe.py  ml_pipeline.py  prepare_data.py
(+349 files in other folders)
