[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "revirement-gaza"
version = "0.1.0"
description = "Analyse discursive du conflit israélo-palestinien à l'Assemblée nationale (2023-2026)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Sami Nakib"}]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
