[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fr-assemblee-discourse-analysis"
version = "0.1.0"
description = "Analyse computationnelle du discours des deputes francais sur le conflit israelo-palestinien (posture academique, descriptive)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Sami Nakib"}]
keywords = ["political-science", "discourse-analysis", "nlp", "france"]

[project.optional-dependencies]
dev = ["pytest", "ruff", "black"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
